updated some buttons to prevent layout shift on loading state

--- a/src/components/PostEditor/PostEditor.module.css
+++ b/src/components/PostEditor/PostEditor.module.css
@@ -204,3 +204,11 @@
   width: 18px;
   height: 18px;
 } 
+
+.commentBtn{
+  min-width: 100px;
+}
+
+.postButton{
+  min-width: 120px;
+}
